[tool.poetry]
name = "ml-gle"
version = "0.1.0"
description = ""
authors = ["Gian-Michele Cherchi"]

[tool.poetry.dependencies]
python = "^3.9.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pyaml = "^21.10.1"
yml = "^0.0.1"
PyYAML = "^6.0"
pyarrow = "^8.0.0"
tqdm = "^4.64.1"
xarray = "0.12.0"
argparse = "^1.4.0"
black = "^23.3.0"
git-lfs = "^1.6"
torch = "1.11.0"
wandb = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
